# webpeek

./: .gitignore  AGENTS.md  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
debian/: postinst
debian/webpeek-package/DEBIAN/: control  postinst  prerm
webpeek/: cli.py
webpeek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webpeek/core/: output.py  scanner.py
webpeek/modules/: emails.py  exposed.py  geo.py  headers.py  robots.py  security_headers.py  sitemap.py  social.py  ssl_info.py  subdomains.py  tech.py  wplugins.py
webpeek/utils/: colors.py
