[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpeek"
version = "1.2.5"
description = "OSINT CLI tool for web reconnaissance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JorgeRosbel", email = "jorge@rosbel.dev"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "dnspython>=2.1",
    "whois>=0.9",
    "beautifulsoup4>=4.9",
    "lxml>=4.6",
    "colorama>=0.4",
    "tldextract>=3.1",
    "pwntools>=4.0",
    "playwright>=1.40",
    "pyee>=10.0",
    "greenlet>=3.0",
]

[project.urls]
Homepage = "https://github.com/JorgeRosbel/webpeek"

[project.scripts]
webpeek = "webpeek.cli:cli"

[project.optional-dependencies]
dev = ["twine", "build"]

[tool.setuptools.packages.find]
where = ["."]
